# AI-for-Accessibility-Toolkit

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  background.js  content.bundle.js  inject.css  manifest.json  package-lock.json  package.json  popup.html  popup.js  pyproject.toml  test-adaptive-tools.js  test-all-axe-rules.js  test-audio-captions.html  test-comprehensive.js  test-handlers.js  test-page.html  test-real-fixes.js  test-rigorous.js  test-sites.js
.github/: pull_request_template.md
cli/: __init__.py  ai4a11y.py  cli-tools.bundle.js  cli-tools.js  cli.py
demo-site/: article.html  index.html  script.js  styles.css
docs/: API.md  README.md  TROUBLESHOOTING.md  adapter-overlap.md  adapter-robustness-plan.md  agent-card.md  architecture.md  artinsight-integration.md  generative-ephemeral-ui-brainstorm.md  observable-settings.md  projects.md  toolkit-adversarial-analysis.md  toolkit-refactor-plan.md  voice-mode.md
examples/: cross-surface.mjs
extension/: background.js  content.bundle.js  inject.css  manifest.json  popup.bundle.js  popup.html  popup.js
lib/: accessibility-widget.min.js  easy-speech.js
personalized-extension/: .gitignore  README.md  build.js  package-lock.json  package.json  plan.md
projects/: README.md
scripts/: cli.js
src/: build.js  content.js  settings.js  stats.js
toolkit/: README.md  index.js  package.json
tools/: README.md  constants.js  index.js
webapp/textcontrol/backend/: .env.example  agent.py  browser_tools.py  main.py  pyproject.toml  skill_loader.py
webapp/voicecontrol/backend/: .env.example  agent.py  browser_tools.py  main.py  pyproject.toml  requirements.txt
(+404 files in other folders)
