[project]
name = "ai4a11y"
version = "0.1.0"
description = "AI-powered accessibility toolkit - CLI for developers and coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "playwright>=1.40.0",
    "pillow>=10.0.0",
    "anthropic>=0.18.0",
]

[project.scripts]
ai4a11y = "cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "tools*"]
